# StoneMason

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  INSTALL.md  LICENSE  README.md  TODO.md  regenCerts.sh  run.sh  setupShaderc.sh  workspace.code-workspace
.github/workflows/: ccpp.yml
include/stms/: async.hpp  audio.hpp  camera.hpp  config.hpp  curl.hpp  except.hpp  freetype.hpp  logging.hpp  scheduler.hpp  stms.hpp  timers.hpp  util.hpp
include/stms/net/: dtls.hpp  dtls_client.hpp  dtls_server.hpp  net.hpp  plain.hpp  plain_tcp.hpp  plain_udp.hpp  ssl.hpp  ssl_client.hpp  ssl_server.hpp
include/stms/proto/: packet.pb.h
include/stms/rend/: window.hpp
include/stms/rend/gl/: buffers.hpp  freetype.hpp  gl.hpp  gl_ImGui.hpp  gl_buffers.hpp  gl_freetype.hpp  gl_model.hpp  gl_shaders.hpp  gl_window.hpp  glft.hpp  imgui.hpp  model.hpp  shaders.hpp  window.hpp
include/stms/rend/vk/: instance.hpp  vk_instance.hpp  vk_passes.hpp  vk_pipeline.hpp  vk_window.hpp  window.hpp
include/stms/util/: compare.hpp  timers.hpp  util.hpp  uuid.hpp
proto/: packet.proto
res/: test.txt
res/shaders/: default.frag  default.vert
res/ssl/: 02.pem  ca-db-index  ca-db-index.old  ca-priv-key.pem  ca-pub-cert.pem  ca.conf  cli-priv-key.pem  cli.csr  regenCerts.sh  serv-priv-key.pem  serv-pub-cert.pem  serv.csr
res/ssl/dubious/: 02.pem  ca-db-index  ca-db-index.old  ca-priv-key.pem  ca-pub-cert.pem  cli-priv-key.pem  cli.csr  serv-priv-key.pem  serv-pub-cert.pem  serv.csr
res/ssl/legit/: ca-db-index  ca-db-index.old  ca-priv-key.pem  ca-pub-cert.pem  cli-priv-key.pem  cli-pub-cert.pem  cli.csr  serv-priv-key.pem  serv-pub-cert.pem  serv.csr
res/vkShaders/: compile.sh
samples/: CMakeLists.txt  ogl_demo.cpp  vk_demo.cpp
samples/DTLS/: client.cpp  server.cpp
sphinx-out/: conf.py  genrst.py  index.rst
src/stms/: async.cpp  audio.cpp  camera.cpp  curl.cpp  freetype.cpp  logging.cpp  scheduler.cpp  stms.cpp  timers.cpp  util.cpp
src/stms/net/: dtls.cpp  dtls_client.cpp  dtls_server.cpp  net.cpp  plain.cpp  plain_udp.cpp  ssl.cpp  ssl_client.cpp  ssl_server.cpp
src/stms/proto/: packet.pb.cc
src/stms/rend/: window.cpp
src/stms/rend/gl/: buffers.cpp  freetype.cpp  gl.cpp  gl_ImGui.cpp  gl_buffers.cpp  gl_freetype.cpp  gl_model.cpp  gl_shaders.cpp  gl_window.cpp  glft.cpp  imgui.cpp  model.cpp  shaders.cpp  window.cpp
src/stms/rend/vk/: instance.cpp  vk_instance.cpp  vk_passes.cpp  vk_pipeline.cpp  vk_window.cpp  window.cpp
src/stms/util/: compare.cpp  timers.cpp  util.cpp  uuid.cpp
tests/: CMakeLists.txt  main.cpp
tests/stms/: async_test.cpp  audio_test.cpp  dtls_test.cpp  general.cpp  log_audio_test.cpp  log_test.cpp  ssl_test.cpp
